<resources>
    <string name="lang">en</string>
    <string name="app_name">Deaf And Mute</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ready_to_learn">Ready to Learn?</string>
    <string name="breaking_language_barriers_together">Breaking language barriers, together.</string>
    <string name="customize_your_learning_experience_with_videos_games_and_more">Customize your learning experience with videos, games, and more</string>
    <string name="get_start">Get Start</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in_to_your_account">Log In to Your Account</string>
    <string name="access_your">Access your personalized learning experience</string>
    <string name="login">Login</string>
    <string name="welcome_Back">Welcome Back!</string>
    <string name="log">Log In to Your Account</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="required_field">*Required Field</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign UP</string>
    <string name="join_us_today">Join Us Today!</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_your_user_name">Enter your User Name</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No.</string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>
    <string name="hello">Hello </string>
    <string name="what_you_want_to_learn_today">What you want to learn today?</string>
    <string name="search">Search</string>
    <string name="author_name">Author Name</string>
    <string name="type_your_message">Type your message</string>
    <string name="no_favorites_yet">No Favorites Yet...</string>
    <string name="our_courses">Our Courses</string>
    <string name="logout">Logout</string>
    <string name="speech_result_will_appear_here">Speech Result Will Appear Here</string>
    <string name="course_name">Course Name</string>
    <string name="valid_email_id">*Enter a Valid Email Id.</string>
    <string name="valid_mobile_no">*Enter a valid Mobile No.</string>
    <string name="password_must_have_at_least_8_characters">*Password Must Have At Least 8 Characters.</string>
    <string name="password_must_contain_an_uppercase_letter">*Password Must Contain an Uppercase Letter.</string>
    <string name="password_must_contain_a_lowercase_letter">*Password Must Contain a Lowercase Letter.</string>
    <string name="password_must_contain_a_number">*Password Must Contain a Number.</string>
    <string name="password_must_contain_a_special_character">*Password Must Contain a Special Character.</string>
    <string name="passwords_didn_t_match">*Passwords didn\'t Match.</string>
    <string name="invalid_email_or_password">Invalid Email or Password.</string>
    <string name="logged_in">Logged In</string>
    <string name="account_created">Account Created</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="post_created">Post Created</string>
    <string name="failed_to_create_post">Failed to create post</string>
    <string name="failed_to_fetch_user_data">Failed to fetch user data</string>
    <string name="post_content_cannot_be_empty">Post content cannot be empty</string>
    <string name="failed_to_load_posts">Failed to load posts</string>
    <string name="listening">Listening...</string>
    <string name="processing">Processing...</string>
    <string name="error_occurred">"Error occurred: "</string>
    <string name="no_speech_detected">No speech detected.</string>
    <string name="failed">Failed...</string>
    <string name="please_enter_text_to_speak">Please enter text to speak</string>
    <string name="language_not_supported_or_missing_data">Language not supported or missing data</string>
    <string name="initialization_failed">Initialization failed</string>
    <string name="recommended">Recommended</string>
    <string name="basic_needs">Basic Needs</string>
    <string name="sign_language">Sign Language</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="speech_to_text">Speech to Text</string>
    <string name="failed_to_load_user_data">Failed to load user data</string>
    <string name="failed_to_update_language">Failed to update language</string>
    <string name="user_not_logged_in">User Not Logged In</string>
    <string name="new_signs">" new Signs"</string>
    <string name="choose">CHOOSE</string>
    <string name="fill_it">FILL IT</string>
    <string name="store_in_brain">STORE IN BRAIN</string>
    <string name="match">MATCH</string>
    <string name="submit">Submit</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="next_level">Next Level</string>
    <string name="excellent">Excellent</string>
    <string name="what_does_it_mean">What does it mean ?</string>
    <string name="learn_new_everyday_just_try">Learn new everyday just try !!</string>
    <string name="your_assignments_are_pending_kindly_completed_that_will_gain_more_scores_accoding_to_the_course">Your assignments are pending kindly completed that will gain more scores accoding to the course.</string>
    <string name="click_here">click here</string>
    <string name="your_course">YOUR COURSE</string>
    <string name="on_going">on going</string>
    <string name="completed">COMPLETED</string>
    <string name="game">GAME</string>
    <string name="view">View</string>
    <string name="course_progress">Course progress</string>
    <string name="failed_to_upload_profile">failed to upload profile</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="tamil">Tamil</string>
    <string name="english">English</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="please_select_a_image">Please Select a Image</string>
    <string name="image_uploaded_successfully">Image Uploaded Successfully!</string>
    <string name="an_error_occurred_while_uploading_the_image">An error occurred while uploading the image</string>
    <string name="upload_failed">"Upload Failed: "</string>
    <string name="user_name_must_be_entered">User Name Must be Entered.</string>
    <string name="mobile_no_must_be_at_10_digits">Mobile No Must be at 10 digits.</string>
    <string name="password_must_be_entered">Password Must be Entered.</string>
    <string name="password_couldn_t_be_a_old_one">Password is same as the old password..</string>
    <string name="failed_to_update_password">Failed to update password</string>
    <string name="reauthentication_failed_check_your_current_password">Reauthentication failed. Check your current password</string>
    <string name="profile_updated">Profile updated.</string>
    <string name="failed_to_update_data">Failed to update data</string>
    <string name="failed_to_load_course_data">Failed to Load Course Data.</string>
    <string name="course_title">course title</string>
    <string name="level">level</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="about_the_course">About the Course</string>
    <string name="skills_that_you_learn_from_the_course">Skills that You Learn from the Course</string>
    <string name="play_sign_lang">Play Sign Lang</string>
    <string name="teach_sign_lang">Teach Sign Lang</string>
    <string name="get_ideas">Get Ideas</string>
    <string name="there_are_5_modules_in_this_course">There are 5 modules in this course</string>
    <string name="why_we_have_to_teach_sign">Why we have to teach sign</string>
    <string name="module_1_1_hour_to_complete">Module 1      –    1 hour to complete</string>
    <string name="how_to_teach">How to teach</string>
    <string name="module_2_1_hour_to_complete">Module 2      –    1 hour to complete</string>
    <string name="how_to_practice_sign">How to practice sign</string>
    <string name="module_3_2_hour_to_complete">Module 3      –    2 hour to complete</string>
    <string name="test_sign_language">Test sign language</string>
    <string name="module_4_3_hour_to_complete">Module 4      –    3 hour to complete</string>
    <string name="practice_with_your_child">Practice with your child</string>
    <string name="module_5_1_hour_to_complete">Module 5      –    1 hour to complete</string>
    <string name="_6_8_week_course">6 - 8 Week Course</string>
    <string name="description_content">Description Content</string>
    <string name="basic_sign">Basic Sign</string>
    <string name="sign_talk">Sign talk</string>
    <string name="practice_test">Practice test</string>
    <string name="_3">+3</string>
    <string name="please_wait_while_uploading_image">Please wait while uploading Image</string>
    <string name="fees">Fees</string>
    <string name="course_payment_via_upi">Course Payment via UPI</string>
    <string name="enter_upi_id">Enter UPI ID</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="pay_via_upi">Pay via UPI</string>
    <string name="scan_qr_code_to_pay">Scan QR Code to Pay</string>
    <string name="please_enter_upi_id">Please Enter UPI ID</string>
    <string name="seconds_left">Seconds left</string>
    <string name="please_wait">Please Wait</string>
    <string name="payment_is_in_progress">Payment is in progress...</string>
    <string name="payment_successfull">Payment Successfull</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="failed_to_fetch_data">failed to fetch data</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="failed_to_load_video">failed to load video</string>
    <string name="enrolled_courses">Enrolled Courses</string>
    <string name="travel">Travel</string>
    <string name="food">Food and Drink</string>
    <string name="emergency">Emergency</string>
    <string name="direction">Direction</string>
    <string name="shopping">Shopping</string>
    <string name="taxi">Where can I get a Taxi?</string>
    <string name="busstop">Where is the Bus Stop?</string>
    <string name="train">Which train goes to [Location]?</string>
    <string name="fare">How much is the Fare?</string>
    <string name="airport">I want to go to the Airport.</string>
    <string name="correct_route">Is this the correct route?</string>
    <string name="hungry">I am hungry.</string>
    <string name="vegetarian">I want vegetarian food.</string>
    <string name="no_spicy">No spicy food please.</string>
    <string name="allergy_nuts">I am allergic to nuts.</string>
    <string name="water_bottle">Can I get a bottle of water?</string>
    <string name="restaurant">Where is the nearest restaurant?</string>
    <string name="help">I need help.</string>
    <string name="police">call the police.</string>
    <string name="lost_wallet">I lost my wallet.</string>
    <string name="fire">There is a fire.</string>
    <string name="injured">I am injured.</string>
    <string name="ambulance">Please call an ambulance.</string>
    <string name="restroom">Where is the restroom?</string>
    <string name="place">How do I get to [place]?</string>
</resources>