<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".WelcomeBack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:fontFamily="@font/poppins"
        android:textFontWeight="700"
        android:textSize="35sp"
        android:textColor="#3A7306"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_your_account"
        android:fontFamily="@font/poppins"
        android:textFontWeight="400"
        android:textColor="#335910"
        android:textSize="15sp"
        />
    <ImageView
        android:layout_width="497dp"
        android:layout_height="303dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/welcome_back"
        />

    <TextView
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:text="@string/access_your"
        android:fontFamily="@font/poppins"
        android:textFontWeight="300"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="#3B3B3B"
        android:textSize="15sp"
        />
    <RelativeLayout
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/gradient_color"
        >
        <Button
            android:layout_width="327dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:onClick="loginPage"
            android:background="#00FFFFFF"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins"
            />
    </RelativeLayout>

</LinearLayout>