<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/ready_to_learn"
        android:textColor="#3A7306"
        android:textFontWeight="700"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:text="@string/breaking_language_barriers_together"
        android:textColor="#335910"
        android:textFontWeight="400"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="497dp"
        android:layout_height="303dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/getstart" />

    <TextView
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/customize_your_learning_experience_with_videos_games_and_more"
        android:textAlignment="center"
        android:textColor="#3B3B3B"
        android:textFontWeight="300"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/gradient_color">

        <Button
            android:layout_width="327dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:fontFamily="@font/poppins"
            android:onClick="WelcomePage"
            android:text="@string/get_start"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>