<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursePayment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#FFFFFF">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_payment_via_upi"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:paddingBottom="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4CAF50"
                android:layout_marginBottom="16dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_background">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/upiId"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginStart="15dp"
                    android:hint="@string/enter_upi_id"
                    android:textColorHint="#3B3B3B"
                    android:fontFamily="@font/poppins"
                    android:background="#00FFFFFF"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:elevation="4dp"
                android:background="@drawable/gradient_color">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/btnUpi"
                    android:text="@string/pay_via_upi"
                    android:textSize="20sp"
                    android:background="#00FFFFFF"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/poppins" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/or"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_qr_code_to_pay"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:paddingBottom="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4CAF50"
                android:layout_marginBottom="16dp"/>
            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/qr_code"
                android:layout_gravity="center"
                android:background="#E8F5E9"
                android:elevation="4dp">
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/scan_icon"
                    android:layout_centerInParent="true"
                    android:alpha="0.2"
                    android:background="#E8F5E9"
                    android:elevation="4dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/qr_code"
                    android:id="@+id/qrCode"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:background="#E8F5E9"
                    android:elevation="4dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/seconds_left"
                android:textColor="#FF0000"
                android:visibility="invisible"
                android:id="@+id/qrCounter"
                android:textAlignment="center"
                android:textSize="13sp"
                android:layout_marginBottom="10dp"
                tools:ignore="HardcodedText"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:elevation="4dp"
                android:background="@drawable/gradient_color">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/scan_qr_code"
                    android:id="@+id/btnScanQR"
                    android:textSize="20sp"
                    android:background="#00FFFFFF"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/poppins" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>